# hw-kafka-conduit

./: .gitignore  .travis.yml  README.md  circle.yml  docker-compose.yml  hw-kafka-conduit.cabal  kafka-client-conduit.cabal  stack.yaml
.circleci/: config.yml
example/: Main.hs
scripts/: build-librdkafka
src/Kafka/: Conduit.hs
src/Kafka/Conduit/: Combinator.hs  Combinators.hs  Consumer.hs  Sink.hs  Source.hs  Utils.hs
test/Kafka/Conduit/: CombinatorSpec.hs  UtilsSpec.hs
