name:                kafka-client-conduit
version:             1.0.0
synopsis:            Conduit bindings for kafka-client
homepage:            https://github.com/haskell-works/kafka-client-conduit
bug-reports:         https://github.com/haskell-works/kafka-client-conduit/issues
license:             MIT
license-file:        LICENSE
author:              Alexey Raga <alexey.raga@gmail.com>
maintainer:          Alexey Raga <alexey.raga@gmail.com>
category:            Database
copyright:           Alexey Raga
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
description:         Conduit bindings for kafka-client

source-repository head
  type:     git
  location: https://github.com/haskell-works/kafka-client-conduit

executable kafka-client-conduit-example
  main-is:             Main.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base >=4.6 && < 5
                     , bytestring
                     , conduit
                     , containers
                     , resourcet
                     , kafka-client-conduit

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Kafka.Conduit.Source
                     , Kafka.Conduit.Sink
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , conduit
                     , conduit-extra
                     , kafka-client
                     , mtl
                     , resourcet
                     , transformers


test-suite kafka-client-conduit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , kafka-client-conduit
                     , bytestring
                     , containers
                     , conduit
                     , conduit-extra
                     , hspec
                     , kafka-client
                     , mtl
                     , resourcet
                     , transformers
